--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/img/whitelogo.png" type="image/png" sizes="16x16">
 
     <!--title-->
-    <title>peh.designid</title>
+    <title>Peh.designid | Create & Creative</title>
 
     <!--build:css-->
     <link rel="stylesheet" href="assets/css/main.css">
